# storage/api-docs/api-docs.json
@@ -96,6 +96,25 @@
                     }
                 ]
             }
+        },
+        "/api/v1/contracts": {
+            "get": {
+                "tags": [
+                    "Contracts"
+                ],
+                "summary": "Get contracts",
+                "operationId": "ed02777bceeda406e8668b146cbb4927",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                },
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -111,6 +130,10 @@
         {
             "name": "Listings",
             "description": "Listings"
+        },
+        {
+            "name": "Contracts",
+            "description": "Contracts"
         }
     ]
 }
